--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@babel/polyfill": "^7.8.7",
         "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
